testing/tests/ui/vars.stderr
error: you can only use the `mut` keyword with a variable name
 --> <source attribute>:2:2
       " let mut (a, b) = (1, 2) %}\n"
 --> tests/ui/vars.rs:6:21
  |
6 |   #[template(source = r#"
  |  _____________________^
7 | | {% let mut (a, b) = (1, 2) %}
8 | | "#, ext = "html")]
  | |__^

error: you can only use the `mut` keyword with a variable name
 --> <source attribute>:2:2
       " let mut [a, b] = [1, 2] %}\n"
  --> tests/ui/vars.rs:12:21
   |
12 |   #[template(source = r#"
   |  _____________________^
13 | | {% let mut [a, b] = [1, 2] %}
14 | | "#, ext = "html")]
   | |__^

error: you can only use the `mut` keyword with a variable name
 --> <source attribute>:2:2
       " let mut Some(a) = Some(\"a\") %}\n"
  --> tests/ui/vars.rs:18:21
   |
18 |   #[template(source = r#"
   |  _____________________^
19 | | {% let mut Some(a) = Some("a") %}
20 | | "#, ext = "html")]
   | |__^
